# mirro-world

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/mirro_world/: __main__.py  logging.py  main.py  settings.py
src/mirro_world/clients/: github_client.py  gitlab_client.py
src/mirro_world/core/: mirror.py
src/mirro_world/utils/: repository_utils.py  url_utils.py
